@@ -1,10 +1,17 @@
 Granite Radios
+
 ==============
+CSS-only ADC 2.0 for single questions and multiple questions.
 
 
-Demo for a CSS-only ADC 2.0 proposal for single questions.
+This is a combined implementation of the proposals for 
+- demo-GraniteRadios (https://github.com/AskiaADX/demo-GraniteRadios)
+- demo-GraniteCheckboxes (https://github.com/AskiaADX/demo-GraniteCheckboxes)
 
+It will also include 
+- demo-GrnaiteSwitches in a future version (https://github.com/AskiaADX/demo-GraniteSwitches)
 
+==============
 
 Preview
 
@@ -15,13 +22,15 @@ Preview
 
 
 
-Possible variables to be open to the end-users
+
+Variables to be open to the end-users
 
 ----------------------------------------------
 
 
--	Radio outer circle background gradient
--	Radio inner circle background gradient
+-	Radio and checkbox outer background gradient
+
+-	Radio and checkbox inner background gradient
 
 -	Radio tick color
 
@@ -29,7 +38,6 @@ Possible variables to be open to the end-users
 
 
 
-I would *not* open the checkbox or tick sizing to end-users as it would oblige them to fiddle around with positioning.
 
 
 
@@ -38,4 +46,6 @@ Known issues
 ------------
 
 
-This demo was successfully tested in Chrome, Firefox, Safari, Opera and IE9+. Because it relies on CSS transforms for the check (tick) of the control, you will need to add a conditional tag for < IE9 that will display the default checkbox instead.
+-	Does not handle exclusive answers in multiple questions
+
+-	This demo was successfully tested in Chrome, Firefox, Safari, Opera and IE9+. Because it relies on CSS transforms for the check (tick) of the control, you will need to add a conditional tag for < IE9 that will display the default checkbox instead.
