@@ -11,17 +11,23 @@
     <date>2015-05-21</date>
     <description>
       <![CDATA[
-        Describe your ADC here
-        
-        Tested in:
-          List the browsers name and version where the ADC should work on.
-          
-        Dependencies:
-          - Name of the 3rd party resource. Version. URL 
-          - Name of the 3rd party resource. Version. URL
-        
-        Notes:
-          Special notes about incompatibility or warnings
+        Granite Radios==============
+        CSS-only ADC 2.0 for single questions and multiple questions.
+        Preview
+
+        -------
+        Variables to be open to the end-users
+
+        ----------------------------------------------
+        -	Radio and checkbox outer background gradient
+        -	Radio and checkbox inner background gradient
+        -	Radio tick color
+        -	Response item color for hover and active states
+        Known issues
+        ------------
+        -	Does not handle exclusive answers in multiple questions
+        -	This demo was successfully tested in Chrome, Firefox, Safari, Opera and IE9+. Because it relies on CSS transforms for the check (tick) of the control, you will need to add a conditional tag for < IE9 that will display the default checkbox instead.
+
       ]]>
     </description>
     <author>
